Java 8 compat + package rename dev.cyphera → io.cyphera
- Package: dev.cyphera.keychain → io.cyphera.keychain (all 24 files)
- Compiler target: 17 → 1.8
- CI matrix: add Java 8 and 11
- Replace all Java 9+ APIs:
  - String.isBlank() → .trim().isEmpty()
  - String.strip() → .trim()
  - Map.of() → Collections.emptyMap()
  - Map.of(k,v) → Collections.singletonMap(k,v)
  - Map.copyOf() → Collections.unmodifiableMap(new HashMap<>(...))
  - List.of() → Collections.singletonList()
  - Path.of() → Paths.get()
  - HexFormat → manual decodeHex() helper
  - switch expressions → if/else
  - text blocks → string concat
  - instanceof pattern matching → traditional cast
  - var → explicit types
  - Files.writeString() → Files.write() with bytes