@@ -1,10 +1,10 @@
-package dev.cyphera.keychain;
+package io.cyphera.keychain;
 
 import org.junit.jupiter.api.Test;
 
 import java.util.Base64;
+import java.util.Collections;
 import java.util.HashMap;
-import java.util.HexFormat;
 import java.util.Map;
 
 import static org.junit.jupiter.api.Assertions.*;
@@ -23,11 +23,19 @@ class EnvProviderTest {
         return new EnvProvider("CYPHERA", env::get);
     }
 
+    private static String encodeHex(byte[] bytes) {
+        StringBuilder sb = new StringBuilder(bytes.length * 2);
+        for (byte b : bytes) {
+            sb.append(String.format("%02x", b & 0xff));
+        }
+        return sb.toString();
+    }
+
     @Test
     void resolve_withHexEncodedKey() throws KeyProviderException {
-        String hexKey = HexFormat.of().formatHex(KEY_BYTES);
-        var env = Map.of("CYPHERA_CUSTOMER_PRIMARY_KEY", hexKey);
-        var provider = providerWithEnv(env);
+        String hexKey = encodeHex(KEY_BYTES);
+        Map<String, String> env = Collections.singletonMap("CYPHERA_CUSTOMER_PRIMARY_KEY", hexKey);
+        EnvProvider provider = providerWithEnv(env);
 
         KeyRecord record = provider.resolve("customer-primary");
 
@@ -41,8 +49,8 @@ class EnvProviderTest {
     @Test
     void resolve_withBase64EncodedKey() throws KeyProviderException {
         String b64Key = Base64.getEncoder().encodeToString(KEY_BYTES);
-        var env = Map.of("CYPHERA_CUSTOMER_PRIMARY_KEY", b64Key);
-        var provider = providerWithEnv(env);
+        Map<String, String> env = Collections.singletonMap("CYPHERA_CUSTOMER_PRIMARY_KEY", b64Key);
+        EnvProvider provider = providerWithEnv(env);
 
         KeyRecord record = provider.resolve("customer-primary");
 
@@ -52,8 +60,8 @@ class EnvProviderTest {
     @Test
     void resolve_withUrlSafeBase64EncodedKey() throws KeyProviderException {
         String b64Key = Base64.getUrlEncoder().encodeToString(KEY_BYTES);
-        var env = Map.of("CYPHERA_CUSTOMER_PRIMARY_KEY", b64Key);
-        var provider = providerWithEnv(env);
+        Map<String, String> env = Collections.singletonMap("CYPHERA_CUSTOMER_PRIMARY_KEY", b64Key);
+        EnvProvider provider = providerWithEnv(env);
 
         KeyRecord record = provider.resolve("customer-primary");
 
@@ -62,13 +70,12 @@ class EnvProviderTest {
 
     @Test
     void resolve_withTweakVar() throws KeyProviderException {
-        String hexKey = HexFormat.of().formatHex(KEY_BYTES);
-        String hexTweak = HexFormat.of().formatHex(TWEAK_BYTES);
-        var env = Map.of(
-                "CYPHERA_CUSTOMER_PRIMARY_KEY", hexKey,
-                "CYPHERA_CUSTOMER_PRIMARY_TWEAK", hexTweak
-        );
-        var provider = providerWithEnv(env);
+        String hexKey = encodeHex(KEY_BYTES);
+        String hexTweak = encodeHex(TWEAK_BYTES);
+        Map<String, String> env = new HashMap<>();
+        env.put("CYPHERA_CUSTOMER_PRIMARY_KEY", hexKey);
+        env.put("CYPHERA_CUSTOMER_PRIMARY_TWEAK", hexTweak);
+        EnvProvider provider = providerWithEnv(env);
 
         KeyRecord record = provider.resolve("customer-primary");
 
@@ -78,16 +85,16 @@ class EnvProviderTest {
 
     @Test
     void resolve_missingKey_throwsKeyNotFoundException() {
-        var provider = providerWithEnv(Map.of());
+        EnvProvider provider = providerWithEnv(Collections.<String, String>emptyMap());
         assertThrows(KeyNotFoundException.class,
                 () -> provider.resolve("customer-primary"));
     }
 
     @Test
     void resolveVersion_version1_works() throws KeyProviderException {
-        String hexKey = HexFormat.of().formatHex(KEY_BYTES);
-        var env = Map.of("CYPHERA_CUSTOMER_PRIMARY_KEY", hexKey);
-        var provider = providerWithEnv(env);
+        String hexKey = encodeHex(KEY_BYTES);
+        Map<String, String> env = Collections.singletonMap("CYPHERA_CUSTOMER_PRIMARY_KEY", hexKey);
+        EnvProvider provider = providerWithEnv(env);
 
         KeyRecord record = provider.resolveVersion("customer-primary", 1);
 
@@ -97,9 +104,9 @@ class EnvProviderTest {
 
     @Test
     void resolveVersion_version2_throwsKeyNotFoundException() {
-        String hexKey = HexFormat.of().formatHex(KEY_BYTES);
-        var env = Map.of("CYPHERA_CUSTOMER_PRIMARY_KEY", hexKey);
-        var provider = providerWithEnv(env);
+        String hexKey = encodeHex(KEY_BYTES);
+        Map<String, String> env = Collections.singletonMap("CYPHERA_CUSTOMER_PRIMARY_KEY", hexKey);
+        EnvProvider provider = providerWithEnv(env);
 
         assertThrows(KeyNotFoundException.class,
                 () -> provider.resolveVersion("customer-primary", 2));
@@ -108,9 +115,9 @@ class EnvProviderTest {
     @Test
     void resolve_refWithDotsNormalized() throws KeyProviderException {
         // ref "my.service.key" should map to MY_SERVICE_KEY
-        String hexKey = HexFormat.of().formatHex(KEY_BYTES);
-        var env = Map.of("CYPHERA_MY_SERVICE_KEY_KEY", hexKey);
-        var provider = providerWithEnv(env);
+        String hexKey = encodeHex(KEY_BYTES);
+        Map<String, String> env = Collections.singletonMap("CYPHERA_MY_SERVICE_KEY_KEY", hexKey);
+        EnvProvider provider = providerWithEnv(env);
 
         KeyRecord record = provider.resolve("my.service.key");
         assertArrayEquals(KEY_BYTES, record.material());
