@@ -1,13 +1,12 @@
-package dev.cyphera.keychain;
+package io.cyphera.keychain;
 
 import org.junit.jupiter.api.Tag;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.condition.EnabledIfEnvironmentVariable;
 
-import java.net.URI;
-import java.net.http.HttpClient;
-import java.net.http.HttpRequest;
-import java.net.http.HttpResponse;
+import java.io.OutputStream;
+import java.net.HttpURLConnection;
+import java.net.URL;
 
 import static org.junit.jupiter.api.Assertions.*;
 
@@ -20,21 +19,26 @@ class VaultIntegrationTest {
     @Test
     void resolve_returnsActiveRecord_againstVaultDev() throws Exception {
         String addr = System.getenv("VAULT_ADDR");
-        String token = System.getenv().getOrDefault("VAULT_TOKEN", "root");
+        String token = System.getenv().containsKey("VAULT_TOKEN")
+                ? System.getenv("VAULT_TOKEN") : "root";
 
         // Write secret via Vault HTTP API
         String body = String.format(
                 "{\"data\":{\"version\":\"1\",\"status\":\"active\",\"algorithm\":\"adf1\",\"material\":\"%s\"}}",
                 MATERIAL_HEX);
-        HttpClient http = HttpClient.newHttpClient();
-        http.send(HttpRequest.newBuilder()
-                .uri(URI.create(addr + "/v1/secret/data/integ-primary"))
-                .header("X-Vault-Token", token)
-                .header("Content-Type", "application/json")
-                .POST(HttpRequest.BodyPublishers.ofString(body))
-                .build(), HttpResponse.BodyHandlers.ofString());
+        URL url = new URL(addr + "/v1/secret/data/integ-primary");
+        HttpURLConnection conn = (HttpURLConnection) url.openConnection();
+        conn.setRequestMethod("POST");
+        conn.setRequestProperty("X-Vault-Token", token);
+        conn.setRequestProperty("Content-Type", "application/json");
+        conn.setDoOutput(true);
+        try (OutputStream os = conn.getOutputStream()) {
+            os.write(body.getBytes("UTF-8"));
+        }
+        conn.getResponseCode();
+        conn.disconnect();
 
-        var provider = new VaultProvider(addr, token);
+        VaultProvider provider = new VaultProvider(addr, token);
         KeyRecord rec = provider.resolve("integ-primary");
         assertEquals(Status.ACTIVE, rec.status());
         assertArrayEquals(hexToBytes(MATERIAL_HEX), rec.material());
